--- a/config-repo/crbook-book.yml
+++ b/config-repo/crbook-book.yml
@@ -7,7 +7,7 @@ eureka:
       defaultZone: http://127.0.0.1:8000/eureka
 spring:
  datasource:
-    driver-class-name: com.yc.jdbc.Driver
+    driver-class-name: com.mysql.jdbc.Driver
     url: jdbc:mysql://127.0.0.1/crbook
     username: root
     password: a
